# active_intruder_tracking

./: README.md
docker/: create_container.sh  my_docker_env.sh
src/multirobot_estimation/filtering_algorithms/: CMakeLists.txt  package.xml
src/multirobot_estimation/km_utils/: CMakeLists.txt  package.xml
src/multirobot_estimation/km_utils/include/km_utils/: math.hpp  matrix_permanent.hpp  types.hpp
src/multirobot_estimation/km_utils/tests/: test_math.cpp
src/multirobot_estimation/kr_common/include/kr_common/: timer.hpp
src/multirobot_estimation/manifold_elements/: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  package.xml
src/multirobot_estimation/manifold_elements/.circleci/: config.yml
src/multirobot_estimation/manifold_elements/include/manifold_elements/: array.hpp  base.hpp  compound.hpp  pose.hpp  pose_vel.hpp  quaternion.hpp  scalar.hpp  so2.hpp  unit_vector_3d.hpp  vector.hpp
src/multirobot_estimation/manifold_elements/tests/: test_so2.cpp  test_unit_vector_3d.cpp
src/multirobot_estimation/matplotlibcpp/: .gitignore  CMakeLists.txt  README.md  package.xml
src/multirobot_estimation/matplotlibcpp/cmake/: Config.cmake.in  FindNumPy.cmake
src/multirobot_estimation/matplotlibcpp/examples/: animation.cpp  bar.cpp  basic.cpp  fill.cpp  fill_inbetween.cpp  imshow.cpp  minimal.cpp  modern.cpp  nonblock.cpp  quiver.cpp  subplot.cpp  surface.cpp  update.cpp  xkcd.cpp
src/multirobot_estimation/matplotlibcpp/include/matplotlibcpp/: matplotlibcpp.h
src/pytorch_optimization/: pyproject.toml
src/pytorch_optimization/pytorch_optimization/: quadric_equation_pytorch.py
src/pytorch_optimization/tests/: test_pytorch_optimization.py
