<?xml version="1.0"?>
<package format="2">
  <name>manifold_elements</name>
  <version>0.1.0</version>
  <description>The manifold_elements package</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <license>Apache-2.0</license>

  <author email="kartikmohta@gmail.com">Kartik Mohta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
