<?xml version="1.0"?>
<package format="2">
  <name>matplotlibcpp</name>
  <version>0.1.0</version>
  <description>The matplotlibcpp package</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <author>Benno Evers</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

